refa (maui): implement iOS and Windows Bluetooth core platform logic
Replace shared stubs throwing exceptions with real native implementations for iOS and Windows platforms.

Add full iOS support for Bluetooth device connection, scanning, advertising, and service/characteristic exploration using native CoreBluetooth proxies. Implement Windows platform support for scanning and broadcasting with native proxies.

Clean up Android fixes and remove obsolete Windows and iOS placeholders for more consistent cross-platform behavior. Remove unnecessary logging flags and adjust API signatures for consistency.

--- a/Plugin.Bluetooth.Maui/Directory.Build.targets
+++ b/Plugin.Bluetooth.Maui/Directory.Build.targets
@@ -139,6 +139,8 @@
   <PropertyGroup>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(Project_Name).xml</DocumentationFile>
+    <!-- Ignore CS1591 -->
+    <NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
 
   <!-- ==================== PACK : SOURCELINK ==================== -->
