--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ env:
 
 jobs:
   version:
-    uses: framinosona/github_actions/.github/workflows/reusable-version.yml@main
+    uses: laerdal/github_actions/.github/workflows/reusable-version.yml@main
     with:
       config-file: "./.config/version.json"
       output-txt: 'output/version/version.txt'
@@ -72,7 +72,7 @@ jobs:
           config-file: '${{ github.workspace }}/global.json'
 
       - name: '📲 Install .NET MAUI workloads if needed'
-        uses: framinosona/github_actions/dotnet@main
+        uses: laerdal/github_actions/dotnet@main
         with:
           command: workload
           arguments: restore '${{ github.workspace }}/${{ env.PROJECT_NAME }}.slnx'
@@ -80,14 +80,14 @@ jobs:
 
       # ============================ BUILD ============================
       - name: '🔄 Restore'
-        uses: framinosona/github_actions/dotnet@main
+        uses: laerdal/github_actions/dotnet@main
         with:
           command: restore
           path: '${{ github.workspace }}/${{ env.PROJECT_NAME }}.slnx'
           show-summary: true
 
       - name: '🔨 Build'
-        uses: framinosona/github_actions/dotnet@main
+        uses: laerdal/github_actions/dotnet@main
         with:
           command: build
           path: '${{ github.workspace }}/${{ env.PROJECT_NAME }}.slnx'
@@ -117,7 +117,7 @@ jobs:
           fi
 
       - name: '🧪 Test with coverage'
-        uses: framinosona/github_actions/dotnet-test@main
+        uses: laerdal/github_actions/dotnet-test@main
         if: ${{ success() && !cancelled() && steps.check-tests.outputs.exists == 'true' }}
         with:
           path: '${{ github.workspace }}/${{ env.PROJECT_NAME }}.Tests/${{ env.PROJECT_NAME }}.Tests.csproj'
@@ -150,7 +150,7 @@ jobs:
           fi
 
       - name: "📚 Build documentation metadata"
-        uses: framinosona/github_actions/dotnet-docfx-metadata@main
+        uses: laerdal/github_actions/dotnet-docfx-metadata@main
         if: ${{ success() && !cancelled() && steps.check-docs.outputs.exists == 'true' }}
         with:
           config: '${{ github.workspace }}/${{ env.PROJECT_NAME }}.Docs/docfx.json'
@@ -158,7 +158,7 @@ jobs:
           show-summary: true
 
       - name: "📚 Build documentation site"
-        uses: framinosona/github_actions/dotnet-docfx-build@main
+        uses: laerdal/github_actions/dotnet-docfx-build@main
         if: ${{ success() && !cancelled() && steps.check-docs.outputs.exists == 'true' }}
         with:
           config: '${{ github.workspace }}/${{ env.PROJECT_NAME }}.Docs/docfx.json'
