--- a/Bluetooth.Maui/Directory.Build.targets
+++ b/Bluetooth.Maui/Directory.Build.targets
@@ -14,6 +14,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <DebugSymbols>true</DebugSymbols>
     <Deterministic>true</Deterministic>
+    <!-- Ignore CS1591 : Missing documentation for publicly visible type or member
+    <NoWarn>$(NoWarn);1591</NoWarn>-->
   </PropertyGroup>
 
   <!-- ==================== LOGGING ==================== -->
@@ -139,8 +141,6 @@
   <PropertyGroup>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(Project_Name).xml</DocumentationFile>
-    <!-- Ignore CS1591 -->
-    <NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
 
   <!-- ==================== PACK : SOURCELINK ==================== -->
