ci: update test path to solution file in workflow
Adjusts the test action configuration to point to the solution file instead of the test project file.
This improves the test workflow by aligning it with the correct build artifact for testing.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -111,7 +111,7 @@ jobs:
         uses: laerdal/github_actions/dotnet-test@main
         if: ${{ success() && !cancelled() }}
         with:
-          path: '${{ github.workspace }}/${{ env.PROJECT_NAME }}.Tests/${{ env.PROJECT_NAME }}.Tests.csproj'
+          path: '${{ github.workspace }}/${{ env.PROJECT_NAME }}.slnx'
           configuration: Release
           no-build: true
           logger: 'trx;LogFileName=test-results.trx'
