chore (nuget): include specific build files in source control
Unignore important build props and targets files to ensure consistent build configuration across environments.

--- a/.gitignore
+++ b/.gitignore
@@ -208,6 +208,8 @@ PublishScripts/
 # NuGet v3's project.json files produces more ignorable files
 *.nuget.props
 *.nuget.targets
+!Directory.Build.Nuget.props
+!Directory.Build.Nuget.targets
 
 # Microsoft Azure Build Output
 csx/
