feat (android): add manifest overlay with necessary bluetooth permissions
Includes Bluetooth and location permissions for both legacy and modern Android APIs in the manifest overlay.

Ensures compatibility with Android 12+ permission requirements for Bluetooth operations.

--- a/Bluetooth.Maui/Bluetooth.Maui.csproj
+++ b/Bluetooth.Maui/Bluetooth.Maui.csproj
@@ -35,6 +35,10 @@
         <PackageReference Include="Plugin.ExceptionListeners.Maui"/>
     </ItemGroup>
 
+    <!-- ==================== ANDROID MANIFEST OVERLAY ==================== -->
+    <ItemGroup Condition=" '$(IsForAndroid)' == 'true' ">
+        <AndroidManifestOverlay Include="Platforms\Android\AndroidManifestOverlay.xml" />
+    </ItemGroup>
 
     <!-- ==================== NESTED FILES ======================= -->
     <ItemGroup>
