--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -13,12 +13,14 @@
   </ItemGroup>
   <!-- ==================== CORE DEPENDENCIES ==================== -->
   <ItemGroup>
-    <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.0" />
+      <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.0" />
+      <PackageVersion Include="Microsoft.Extensions.Logging.Debug" Version="10.0.0" />
   </ItemGroup>
   <!-- ==================== MAUI DEPENDENCIES ==================== -->
   <ItemGroup>
     <PackageVersion Include="Microsoft.Maui.Core" Version="$(MauiVersion)" />
     <PackageVersion Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
+    <PackageVersion Include="Microsoft.Maui.Essentials" Version="$(MauiVersion)" />
   </ItemGroup>
   <!-- ==================== TEST DEPENDENCIES ==================== -->
   <ItemGroup>
