feat (maui): add bluetooth scanner sample app with navigation and exception handling
Adds a complete Bluetooth scanner sample including scanning service, navigation service, base view models, and views with MVVM support. Integrates comprehensive exception listeners for better error handling. Updates platform manifests with Bluetooth usage descriptions and improves app structure by removing the old shell-based navigation.

Enhances user experience with scanning controls, device listing, and configuration popups using community toolkit converters and commands.

--- a/Bluetooth.Maui.Sample/Bluetooth.Maui.Sample.csproj
+++ b/Bluetooth.Maui.Sample/Bluetooth.Maui.Sample.csproj
@@ -51,13 +51,38 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="CommunityToolkit.Mvvm" />
         <PackageReference Include="Microsoft.Maui.Controls"/>
-        <PackageReference Include="Microsoft.Maui.Essentials"/>
-        <PackageReference Include="Microsoft.Extensions.Logging.Debug"/>
+        <PackageReference Include="Microsoft.Maui.Essentials" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Debug" />
+        <PackageReference Include="CommunityToolkit.Maui" />
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="NLog.Extensions.Logging" />
+        <PackageReference Include="NLog.Targets.MauiLog" />
+        <PackageReference Include="Plugin.ByteArrays" />
+        <PackageReference Include="Plugin.BaseTypeExtensions" />
+        <PackageReference Include="Plugin.ExceptionListeners" />
+        <PackageReference Include="Plugin.ExceptionListeners.Maui" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\Bluetooth.Core\Bluetooth.Core.csproj" />
         <ProjectReference Include="..\Bluetooth.Maui\Bluetooth.Maui.csproj"/>
+    </ItemGroup>
+
+    <ItemGroup>
+      <MauiXaml Update="Views\Popup\ScannerConfigPopup.xaml">
+        <SubType>Designer</SubType>
+      </MauiXaml>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Update="Views\Popup\ScannerConfigPopup.xaml.cs">
+        <DependentUpon>ScannerConfigPopup.xaml</DependentUpon>
+        <SubType>Code</SubType>
+      </Compile>
     </ItemGroup>
 
 </Project>
