--- a/Bluetooth.Maui.Sample/Platforms/MacCatalyst/Entitlements.plist
+++ b/Bluetooth.Maui.Sample/Platforms/MacCatalyst/Entitlements.plist
@@ -9,6 +9,10 @@
         <!-- When App Sandbox is enabled, this value is required to open outgoing network connections. -->
         <key>com.apple.security.network.client</key>
         <true/>
+
+        <!-- Allow Bluetooth device access -->
+        <key>com.apple.security.device.bluetooth</key>
+        <true/>
     </dict>
 </plist>
 
