--- a/Bluetooth.Maui.Sample/Platforms/iOS/Info.plist
+++ b/Bluetooth.Maui.Sample/Platforms/iOS/Info.plist
@@ -28,5 +28,9 @@
 	</array>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/appicon.appiconset</string>
+    <key>NSBluetoothAlwaysUsageDescription</key>
+    <string>This app uses Bluetooth to connect to nearby devices.</string>
+    <key>NSBluetoothPeripheralUsageDescription</key>
+    <string>This app uses Bluetooth to communicate with external devices.</string>
 </dict>
 </plist>
