--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ defaults:
 env:
   DOTNET_CLI_TELEMETRY_OPTOUT: '1'
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: '1'
-  SOLUTION_NAME: Bluetooth.slnx
+  SOLUTION_PATH: 'Bluetooth.slnx'
 
 jobs:
   version:
@@ -75,7 +75,7 @@ jobs:
         uses: laerdal/github_actions/dotnet@main
         with:
           command: workload
-          arguments: restore '${{ github.workspace }}/${{ env.SOLUTION_NAME }}'
+          arguments: restore '${{ github.workspace }}/${{ env.SOLUTION_PATH }}'
           show-summary: true
 
       # ============================ BUILD ============================
@@ -83,14 +83,14 @@ jobs:
         uses: laerdal/github_actions/dotnet@main
         with:
           command: restore
-          path: '${{ github.workspace }}/${{ env.SOLUTION_NAME }}'
+          path: '${{ github.workspace }}/${{ env.SOLUTION_PATH }}'
           show-summary: true
 
       - name: '🔨 Build'
         uses: laerdal/github_actions/dotnet@main
         with:
           command: build
-          path: '${{ github.workspace }}/${{ env.SOLUTION_NAME }}'
+          path: '${{ github.workspace }}/${{ env.SOLUTION_PATH }}'
           configuration: Release
           no-restore: true
           arguments: >
@@ -111,7 +111,7 @@ jobs:
         uses: laerdal/github_actions/dotnet-test@main
         if: ${{ success() && !cancelled() }}
         with:
-          path: '${{ github.workspace }}/${{ env.SOLUTION_NAME }}'
+          path: '${{ github.workspace }}/${{ env.SOLUTION_PATH }}'
           configuration: Release
           no-build: true
           logger: 'trx;LogFileName=test-results.trx'
@@ -130,6 +130,7 @@ jobs:
             echo "found=true" >> "$GITHUB_OUTPUT"
           else
             echo "found=false" >> "$GITHUB_OUTPUT"
+            echo "::warning::No test results found. Skipping test artifact upload."
           fi
 
       - name: '📦 Upload test artifacts'
@@ -143,47 +144,36 @@ jobs:
       - name: '🔍 Check if docs are needed'
         id: check-docs
         run: |
-          if [ -d "${{ github.workspace }}/Docs" ]; then
+          if [ "${{ env.DOCS_PATH }}" != "" ] && [ -d "${{ github.workspace }}/${{ env.DOCS_PATH }}" ]; then
             echo "exists=true" >> "$GITHUB_OUTPUT"
           else
             echo "exists=false" >> "$GITHUB_OUTPUT"
+            echo "::warning::Documentation path is not set or does not exist, skipping documentation build."
           fi
 
       - name: "📚 Build documentation metadata"
         uses: laerdal/github_actions/dotnet-docfx-metadata@main
         if: ${{ success() && !cancelled() && steps.check-docs.outputs.exists == 'true' }}
         with:
-          config: '${{ github.workspace }}/Docs/docfx.json'
-          output: '${{ github.workspace }}/Docs/api'
+          config: '${{ github.workspace }}/${{ env.DOCS_PATH }}/docfx.json'
+          output: '${{ github.workspace }}/${{ env.DOCS_PATH }}/api'
           show-summary: true
 
       - name: "📚 Build documentation site"
         uses: laerdal/github_actions/dotnet-docfx-build@main
         if: ${{ success() && !cancelled() && steps.check-docs.outputs.exists == 'true' }}
         with:
-          config: '${{ github.workspace }}/Docs/docfx.json'
-          output: '${{ github.workspace }}/Docs/site'
+          config: '${{ github.workspace }}/${{ env.DOCS_PATH }}/docfx.json'
+          output: '${{ github.workspace }}/${{ env.DOCS_PATH }}/site'
           show-summary: true
 
       - name: "📦 Upload GitHub Pages artifact"
         if: ${{ success() && !cancelled() && github.ref == 'refs/heads/main' && steps.check-docs.outputs.exists == 'true' }}
         uses: actions/upload-pages-artifact@v4
         with:
-          path: '${{ github.workspace }}/Docs/site'
+          path: '${{ github.workspace }}/${{ env.DOCS_PATH }}/site'
           name: github-pages
 
-  publish-docs:
-    name: '🚀 Deploy to GitHub Pages'
-    if: github.ref == 'refs/heads/main' && needs.build.outputs.has-docs == 'true'
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
 
   publish-nuget:
     name: '🚀 Publish to NuGet.org'
@@ -224,11 +214,24 @@ jobs:
         with:
           files: '${{ github.workspace }}/tests/test-results.trx'
 
+  publish-docs:
+    name: '🚀 Deploy to GitHub Pages'
+    if: github.ref == 'refs/heads/main' && needs.build.outputs.has-docs == 'true'
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: publish-nuget
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
+
   tag-and-release:
     name: '🏷️ Tag & Release'
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
-    needs: [version, publish-nuget, publish-docs, publish-tests]
+    needs: [version, publish-nuget]
     steps:
       - name: '🔄 Checkout'
         uses: actions/checkout@v6
