--- a/Bluetooth.Maui.Platforms.Windows/Bluetooth.Maui.Platforms.Windows.csproj
+++ b/Bluetooth.Maui.Platforms.Windows/Bluetooth.Maui.Platforms.Windows.csproj
@@ -10,11 +10,7 @@
 
     <!-- ==================== TARGET FRAMEWORKS ==================== -->
     <PropertyGroup>
-        <TargetFrameworks>net10.0</TargetFrameworks>
-        <TargetFrameworks>$(TargetFrameworks);net10.0-android36.1</TargetFrameworks>
-        <TargetFrameworks>$(TargetFrameworks);net10.0-maccatalyst</TargetFrameworks>
-        <TargetFrameworks>$(TargetFrameworks);net10.0-ios</TargetFrameworks>
-        <TargetFrameworks>$(TargetFrameworks);net10.0-windows10.0.19041.0</TargetFrameworks>
+        <TargetFramework>net10.0-windows10.0.19041.0</TargetFramework>
     </PropertyGroup>
 
     <!-- ==================== MAUI ==================== -->
