build (maui): update windows platform condition in targets
Changes the condition for including the Windows target framework to rely on the host machine being Windows. This ensures the Windows platform is correctly targeted during the build on Windows hosts.

--- a/Bluetooth.Maui.Sample.Scanner/Bluetooth.Maui.Sample.Scanner.csproj
+++ b/Bluetooth.Maui.Sample.Scanner/Bluetooth.Maui.Sample.Scanner.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <TargetFrameworks>net10.0-android;net10.0-ios;net10.0-maccatalyst</TargetFrameworks>
-        <TargetFrameworks Condition=" '$(IncludeWindowsPlatform)' == 'true' ">$(TargetFrameworks);net10.0-windows10.0.26100.0</TargetFrameworks>
+        <TargetFrameworks Condition=" '$(IsHostMachineWindows)' == 'true' ">$(TargetFrameworks);net10.0-windows10.0.26100.0</TargetFrameworks>
     </PropertyGroup>
 
     <PropertyGroup>
