feat (maui): register platform Bluetooth scanner and broadcaster services
Adds platform-specific Bluetooth scanner and broadcaster singleton services for Apple and Android.

Adjusts core service registrations and encapsulates broadcasting service factory visibility to improve encapsulation.

Also updates project assets and enables ticker service registration in the shared Bluetooth Maui services.

--- a/Bluetooth.Maui.Sample.Scanner/Bluetooth.Maui.Sample.Scanner.csproj
+++ b/Bluetooth.Maui.Sample.Scanner/Bluetooth.Maui.Sample.Scanner.csproj
@@ -85,5 +85,26 @@
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" />
     </ItemGroup>
 
+    <ItemGroup>
+      <AndroidResource Include="Resources\Images\dotnet_bot.png">
+        <Generator>MSBuild:UpdateGeneratedFiles</Generator>
+      </AndroidResource>
+      <AndroidResource Include="Resources\Raw\AboutAssets.txt">
+        <Generator>MSBuild:UpdateGeneratedFiles</Generator>
+      </AndroidResource>
+    </ItemGroup>
+
+    <ItemGroup>
+      <MauiSplashScreen Include="Resources\Splash\splash.svg" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <BundleResource Include="Resources\AppIcon\appiconfg.svg" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <MauiIcon Include="Resources\AppIcon\appicon.svg" />
+    </ItemGroup>
+
 
 </Project>
