Revert "refa (csproj): remove nowarn property groups from project files"
This reverts commit f08e3862f7087ee9cbff36e818d486359a12a511.

--- a/Bluetooth.Abstractions.Broadcasting/Bluetooth.Abstractions.Broadcasting.csproj
+++ b/Bluetooth.Abstractions.Broadcasting/Bluetooth.Abstractions.Broadcasting.csproj
@@ -7,6 +7,17 @@
         <Project_Description>Bluetooth.Abstractions.Broadcasting for .NET</Project_Description>
     </PropertyGroup>
 
+    <!-- ==================== NOWARNINGS ==================== -->
+    <PropertyGroup>
+        <!-- CA1034 : Nested types should not be externally visible-->
+        <NoWarn>$(NoWarn);CA1034</NoWarn>
+        <!-- CA1032 : Implement standard exception constructors -->
+        <NoWarn>$(NoWarn);CA1032</NoWarn>
+        <!-- CS1591 : Missing documentation for publicly visible type or member -->
+        <!-- <NoWarn>$(NoWarn);CS1591</NoWarn> -->
+        <!-- CA1816 : Call GC.SuppressFinalize correctly -->
+        <NoWarn>$(NoWarn);CA1816</NoWarn>
+    </PropertyGroup>
 
     <!-- ==================== TARGET FRAMEWORKS ==================== -->
     <PropertyGroup>
