--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ defaults:
 env:
   DOTNET_CLI_TELEMETRY_OPTOUT: '1'
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: '1'
-  SOLUTION_PATH: 'Bluetooth.Packages.slnf'
+  SOLUTION_PATH: 'Bluetooth.Packages.slnx'
 
 jobs:
   version:
