build (packaging): disable packaging in release for core and abstractions projects
Adds conditional packaging to prevent creating NuGet packages in release configurations for core, abstractions, broadcasting, scanning, and platform projects.

This change ensures only debug builds produce packages locally, maintaining release packaging focus on the main Maui package.

--- a/Bluetooth.Core.Broadcasting/Bluetooth.Core.Broadcasting.csproj
+++ b/Bluetooth.Core.Broadcasting/Bluetooth.Core.Broadcasting.csproj
@@ -14,7 +14,7 @@
         <!-- CA1032 : Implement standard exception constructors -->
         <NoWarn>$(NoWarn);CA1032</NoWarn>
         <!-- CS1591 : Missing documentation for publicly visible type or member -->
-        <!-- <NoWarn>$(NoWarn);CS1591</NoWarn> --> 
+        <!-- <NoWarn>$(NoWarn);CS1591</NoWarn> -->
         <!-- CA1816 : Call GC.SuppressFinalize correctly -->
         <NoWarn>$(NoWarn);CA1816</NoWarn>
     </PropertyGroup>
@@ -22,6 +22,12 @@
     <!-- ==================== TARGET FRAMEWORKS ==================== -->
     <PropertyGroup>
         <TargetFramework>net10.0</TargetFramework>
+    </PropertyGroup>
+
+    <!-- ==================== PACKAGING ==================== -->
+    <PropertyGroup>
+        <!-- Only package in Debug mode for local testing - Release builds only package Bluetooth.Maui -->
+        <IsPackable Condition="'$(Configuration)' == 'Release'">false</IsPackable>
     </PropertyGroup>
 
     <!-- ==================== PACKAGE REFERENCES / DEPENDENCIES ==================== -->
