--- a/Bluetooth.Maui.Platforms.Droid/Bluetooth.Maui.Platforms.Droid.csproj
+++ b/Bluetooth.Maui.Platforms.Droid/Bluetooth.Maui.Platforms.Droid.csproj
@@ -25,6 +25,12 @@
         <TargetFramework>net10.0-android36.1</TargetFramework>
     </PropertyGroup>
 
+    <!-- ==================== PACKAGING ==================== -->
+    <PropertyGroup>
+        <!-- Only package in Debug mode for local testing - Release builds only package Bluetooth.Maui -->
+        <IsPackable Condition="'$(Configuration)' == 'Release'">false</IsPackable>
+    </PropertyGroup>
+
     <!-- ==================== PACKAGE REFERENCES / DEPENDENCIES ==================== -->
     <ItemGroup>
         <ProjectReference Include="../Bluetooth.Abstractions/Bluetooth.Abstractions.csproj" PrivateAssets="all" />
